jsdebug/web/src/components/App.css
.app-container {
    height: 100%;
    display: flex;
}

.app-code {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.app-log {
    flex: 2;
    border: 1px solid black;
    font-family: monospace;
    margin: 0 10px;
    padding: 5px 10px;
    width: 100%;
    overflow-y: auto;
    white-space: pre-wrap;
}

.app-log-line {
    padding: 2px 0;
}

.app-algo {
    white-space: pre-wrap;
    overflow-y: auto;
}

